[gd_scene load_steps=2 format=3 uid="uid://dilg0e5h66qys"]

[ext_resource type="Script" path="res://elements/hud/inventory_menu/item_details_menu/item_details_menu.gd" id="1_jvtpm"]

[node name="ItemDetailsMenu" type="Control"]
layout_mode = 3
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 256.0
grow_vertical = 2
script = ExtResource("1_jvtpm")

[node name="ItemsDetailVBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 256.0
grow_vertical = 2

[node name="ItemNameLabel" type="Label" parent="ItemsDetailVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemTexture" type="TextureRect" parent="ItemsDetailVBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ItemRarityLabel" type="Label" parent="ItemsDetailVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Rarity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemLevelLabel" type="Label" parent="ItemsDetailVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Lv. 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsVBoxContainer" type="VBoxContainer" parent="ItemsDetailVBoxContainer"]
layout_mode = 2

[node name="MainStatLabel" type="Label" parent="ItemsDetailVBoxContainer/StatsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main"

[node name="AdditionnalStat1Label" type="Label" parent="ItemsDetailVBoxContainer/StatsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AdditionnalStat1Label"

[node name="AdditionnalStat2Label" type="Label" parent="ItemsDetailVBoxContainer/StatsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AdditionnalStat2Label"

[node name="AdditionnalStat3Label" type="Label" parent="ItemsDetailVBoxContainer/StatsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AdditionnalStat3Label"

[node name="AdditionnalStat4Label" type="Label" parent="ItemsDetailVBoxContainer/StatsVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "AdditionnalStat4Label"

[node name="LevelUpButton" type="Button" parent="ItemsDetailVBoxContainer"]
layout_mode = 2
text = "Level Up"

[node name="NoItemSelectedLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "No item selected"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ItemsDetailVBoxContainer/LevelUpButton" to="." method="_on_level_up_button_pressed"]
